# 2D-Game-Engine

./: .gitignore  CMakeLists.txt
src/: game.cpp  game.h  logger.cpp  logger.h  main.cpp
